# keras-nalu

./: .gitignore  .pylintrc  README.md  pyproject.toml
.circleci/: config.yml
keras_nalu/: nalu.py
keras_nalu/pretrained/: model.h5  model.py  train.py
src/: nalu.py
test/: shared.py  test_load_and_predict.py  test_train_static_addition.py  test_train_static_division.py  test_train_static_multiplication.py  test_train_static_square.py  test_train_static_square_root.py  test_train_static_subtraction.py
tests/: shared.py  test_load_and_predict.py  test_pretrained.py  test_train_static_addition.py  test_train_static_division.py  test_train_static_multiplication.py  test_train_static_square.py  test_train_static_square_root.py  test_train_static_subtraction.py
