[tool.poetry]
name = "keras-nalu"
version = "1.0.3"
description = "Keras implementation of a NALU layer"
authors = ["Dennis Torres <djtorres0@gmail.com>"]
homepage = "https://github.com/genesant/keras-nalu"
keywords = ["keras", "nalu"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/genesant/keras-nalu"

[tool.poetry.dependencies]
keras = "^2.2"
python = "^3.5"

[tool.poetry.dev-dependencies]
mypy = "0.670.0"
numpy = "1.16.2"
pylint = "2.3.1"
pytest = "4.3.1"
pytest-cov = "2.6.1"
tensorflow = "1.13.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
